# DTEAM-practical-test

./: .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  pylint.yml
sc_backend/djapps/audit/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
sc_backend/djapps/audit/migrations/: 0001_initial.py
sc_backend/djapps/audit/templates/audit/: log_requests.html  recent_requests.html
sc_backend/djapps/audit/templates/audit/partials/: logs_table.html
sc_backend/djapps/audit/tests/: test_middleware.py
sc_backend/djapps/core/: context_processors.py  tests.py  urls.py  views.py
sc_backend/djapps/core/templates/core/: settings_page.html
sc_backend/djapps/cvsai/: admin.py  api_urls.py  api_views.py  apps.py  constants.py  forms.py  models.py  serializers.py  tasks.py  translation_services.py  urls.py  utils.py  views.py
sc_backend/djapps/cvsai/fixtures/: cvsai_initial_data.json
sc_backend/djapps/cvsai/migrations/: 0001_initial.py  0002_resume_title.py
sc_backend/djapps/cvsai/templates/cvsai/: resume_detail.html  resume_list.html  resume_pdf.html  translate_cv.html
sc_backend/djapps/cvsai/templates/cvsai/emails/: cv_email.txt
sc_backend/djapps/cvsai/tests/: conftest.py  constants.py  test_api.py  test_views.py
sc_backend/djproject/: celery.py  urls.py
sc_backend/djproject/settings/: __init__.py  base_celery.py  base_django.py  base_localdev.py  production.py  testing.py
sc_backend/djproject/templates/: 404.html  base.html
