[tool.poetry]
name = "dteam-practical-test"
version = "0.1.0"
description = "Django Developer Practical Test"
authors = ["Oleksandr Shtalinberg <Shtalinberg@ukr.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^25.1.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"