[tool.poetry]
name = "dteam-practical-test"
version = "0.1.0"
description = "Django Developer Practical Test"
authors = ["Oleksandr Shtalinberg <Shtalinberg@ukr.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^25.1.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88
skip-string-normalization = true
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific for Django.
  | tests
  | migrations
  | \.git
  | help-man
)/
'''

[tool.isort]
profile = "black"
blocked_extensions = [
    "rst","html","js","svg","txt","css","scss","png","snap","tsx"
]
combine_as_imports = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
known_django = "django"
sections=["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
skip = ["migrations",".git","__pycache__","LC_MESSAGES"]
src_paths = ["src","src/apps","src/compat"]
line_length = 88
multi_line_output = 3
no_lines_before="LOCALFOLDER"
