[tool.poetry]
name = "dteam-practical-test"
version = "0.1.0"
description = "Django Developer Practical Test"
authors = ["Oleksandr Shtalinberg <Shtalinberg@ukr.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2.1"
xhtml2pdf = "^0.2.17"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
celery = "^5.5.2"
redis = "^6.1.0"
dj-database-url = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-django = "^4.11.0"
pylint-celery = "^0.3"
black = "^25.1.0"
flake8 = "^7.1.0"
pylint = "^3.3.7"
pylint-django = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88
skip-string-normalization = true
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific for Django.
  | tests
  | migrations
  | \.git
  | help-man
)/
'''

[tool.isort]
profile = "black"
blocked_extensions = [
    "rst","html","js","svg","txt","css","scss","png","snap","tsx"
]
combine_as_imports = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
known_django = "django"
sections=["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
skip = ["migrations",".git","__pycache__","LC_MESSAGES"]
src_paths = ["sc_backend","sc_backend/djapps"]
line_length = 88
multi_line_output = 3
no_lines_before="LOCALFOLDER"
