[options]
python_requires >= 3.12

[flake8]
# see examples on the  https://www.flake8rules.com/
exclude = build,.git,.tox,./tests/.env,.venv,.venv3,help-man,docs,logs,**/migrations/*.py, */djproject/settings/*
ignore = F405,W504,W503
max-line-length = 119

[tool:pytest]
django_find_project = false
pythonpath = sc_backend
DJANGO_SETTINGS_MODULE = djproject.settings.testing
python_files = tests*.py test_*.py *_tests.py tests
addopts = -rs -p no:warnings --durations=5 --durations-min=0.5
norecursedirs = docs docker logs fixtures help-man

